--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Pixels&display=swap');
 @import "tailwindcss";
 
 @theme {
@@ -5,6 +6,7 @@
   --breakpoint-md: 1000px;
   
   --filter-logo: sepia(60%) grayscale(30%);
+  --font-rubik-pixels: "Rubik Pixels", sans-serif;
 }
 
 :root {
