--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Pixels&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barrio&display=swap');
 @import "tailwindcss";
 
 @theme {
@@ -7,10 +8,12 @@
   
   --filter-logo: sepia(60%) grayscale(30%);
   --font-rubik-pixels: "Rubik Pixels", sans-serif;
+  --font-barrio: "Barrio", system-ui;
 }
 
 :root {
   background-color: #342f2f;
+  color:rgb(141, 140, 140);
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
