--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,49 @@
 
   --color-primary:#342f2f;
   --color-secondary: #8d8c8c;
+
+  --animate-appear: appear 3s forwards;
+  --animate-disappear: disappear 3s forwards;
+  
+  @keyframes appear {
+    0% {
+      opacity: 0%;
+      visibility:hidden;
+    }
+    50% {
+      opacity: 0%;
+      visibility:hidden;
+    }
+    100% {
+      opacity: 100%;
+      visibility:visible;
+    }
+  }
+
+  @keyframes disappear {
+    0% {
+      opacity:100%;
+      visibility:visible;
+    }
+    50% {
+      opacity: 100%;
+      visibility:visible;
+    }
+    100% {
+      opacity:0%;
+      visibility:hidden;
+    }
+  }
 }
 
 :root {
   background-color: #342f2f;
   color:#8d8c8c;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+th, td{
+  padding-inline: 5px;
 }
 
 @media screen and (width <= 600px) {
